include/spark/scripting/SparkInterop.h

typedef struct SparkGameWorld SparkGameWorld;
typedef struct SparkGameComponent SparkGameComponent;
SPARK_SCRIPT_API void spark_rigidbody_3d_get_angular_velocity(const SparkGameComponent* body, SparkVector3* out);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_angular_velocity(SparkGameComponent* body, const SparkVector3* v);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_linear_damping(SparkGameComponent* body, float v);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_angular_damping(SparkGameComponent* body, float v);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_restitution(SparkGameComponent* body, float v);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_inverse_mass(SparkGameComponent* body, float inverseMass);
/* --- Collision filter helpers (mirrors CollisionFilter2D) --- */
SPARK_SCRIPT_API uint16_t spark_collision_filter_2d_layer_bit(uint32_t layerIndex);
SPARK_SCRIPT_API uint16_t spark_collision_filter_2d_all_layers_mask(void);
SPARK_SCRIPT_API uint16_t spark_collision_filter_2d_default_category(void);
/* --- 2D physics queries (mirrors PhysicsQueries2D.hpp) --- */
SPARK_SCRIPT_API uint32_t spark_physics_query_overlap_circle_world_2d(
        SparkGameWorld* world,
        float centerX,
        float centerY,
        float radius,
        const SparkPhysicsQueryFilter2D* filter,
        SparkPhysicsQueryHit2D* outHits,
        uint32_t maxHits,
        float cellWorldSize);
SPARK_SCRIPT_API uint32_t spark_physics_query_overlap_arc_world_statics_2d(
        SparkGameWorld* world,
        float originX,
        float originY,
        float radius,
        float dirX,
        float dirY,
        float halfAngleRadians,
        const SparkPhysicsQueryFilter2D* filter,
        SparkPhysicsQueryHit2D* outHits,
        uint32_t maxHits,
        float cellWorldSize);
/* --- Box collider 2D --- */
SPARK_SCRIPT_API void spark_box_collider_2d_set_is_trigger(SparkGameComponent* collider, int isTrigger);
SPARK_SCRIPT_API void spark_box_collider_2d_set_half_extents(SparkGameComponent* collider, const SparkVector2* halfExtents);
SPARK_SCRIPT_API void spark_box_collider_2d_set_category_bits(SparkGameComponent* collider, uint16_t bits);
SPARK_SCRIPT_API void spark_box_collider_2d_set_mask_bits(SparkGameComponent* collider, uint16_t bits);
/* --- Circle collider 2D --- */
SPARK_SCRIPT_API void spark_circle_collider_2d_set_is_trigger(SparkGameComponent* collider, int isTrigger);
SPARK_SCRIPT_API void spark_circle_collider_2d_set_radius(SparkGameComponent* collider, float radius);
SPARK_SCRIPT_API void spark_circle_collider_2d_set_category_bits(SparkGameComponent* collider, uint16_t bits);
SPARK_SCRIPT_API void spark_circle_collider_2d_set_mask_bits(SparkGameComponent* collider, uint16_t bits);
/* --- Animator (mirrors AnimatorComponent) --- */
SPARK_SCRIPT_API uint32_t spark_animator_get_clip_index(const SparkGameComponent* animator);
SPARK_SCRIPT_API float spark_animator_get_time_seconds(const SparkGameComponent* animator);
SPARK_SCRIPT_API float spark_animator_get_speed(const SparkGameComponent* animator);
SPARK_SCRIPT_API void spark_animator_set_clip_index(SparkGameComponent* animator, uint32_t clipIndex);
SPARK_SCRIPT_API void spark_animator_set_speed(SparkGameComponent* animator, float speed);
SPARK_SCRIPT_API void spark_animator_set_time_seconds(SparkGameComponent* animator, float timeSeconds);
SPARK_SCRIPT_API uint32_t spark_animator_get_clip_count(const SparkGameComponent* animator);
SPARK_SCRIPT_API uint32_t spark_animator_get_loop_mode(const SparkGameComponent* animator);
SPARK_SCRIPT_API void spark_animator_set_loop_mode(SparkGameComponent* animator, uint32_t loopMode);
SPARK_SCRIPT_API int spark_animator_is_clip_finished(const SparkGameComponent* animator);
SPARK_SCRIPT_API void spark_animator_set_clip_index_with_crossfade(
        SparkGameComponent* animator,
        uint32_t clipIndex,
        float crossfadeDurationSec);
SPARK_SCRIPT_API int32_t spark_animator_find_clip_index_by_name(const SparkGameComponent* animator, const char* name);
SPARK_SCRIPT_API int spark_animator_get_clip_name(
        const SparkGameComponent* animator,
        uint32_t clipIndex,
        char* outUtf8,
        uint32_t outCapacity);
/* --- Sprite animator (2D flipbook) --- */
SPARK_SCRIPT_API void spark_sprite_animator_set_uniform_grid(
        SparkGameComponent* animator,
        uint32_t columns,
        uint32_t rows);
SPARK_SCRIPT_API void spark_sprite_animator_clear_clips(SparkGameComponent* animator);
SPARK_SCRIPT_API void spark_sprite_animator_add_clip(
        SparkGameComponent* animator,
        const SparkSpriteAnimationClip* clip);
SPARK_SCRIPT_API void spark_sprite_animator_set_clip_index(SparkGameComponent* animator, uint32_t clipIndex);
SPARK_SCRIPT_API uint32_t spark_sprite_animator_get_clip_index(const SparkGameComponent* animator);
SPARK_SCRIPT_API uint32_t spark_sprite_animator_get_clip_count(const SparkGameComponent* animator);
SPARK_SCRIPT_API int spark_sprite_animator_is_current_clip_finished(const SparkGameComponent* animator);
SPARK_SCRIPT_API void spark_sprite_animator_compute_uniform_grid_uv(
        uint32_t columns,
        uint32_t rows,
        uint32_t linearFrame,
        SparkVector4* outUvRect);
/* --- Sprite2D character animation FSM --- */
SPARK_SCRIPT_API void spark_sprite_2d_fsm_set_locomotion_clips(
        SparkGameComponent* fsm,
        uint32_t idleClipIndex,
        uint32_t moveClipIndex);
SPARK_SCRIPT_API void spark_sprite_2d_fsm_set_combat_clips(
        SparkGameComponent* fsm,
        uint32_t attackClipIndex,
        uint32_t hurtClipIndex);
SPARK_SCRIPT_API void spark_sprite_2d_fsm_set_move_speed_threshold(SparkGameComponent* fsm, float worldUnits);
SPARK_SCRIPT_API void spark_sprite_2d_fsm_set_locomotion_source(
        SparkGameComponent* fsm,
        SparkSprite2DAnimLocomotionSource source);