include/spark/scripting/SparkInteropTypes.h

typedef struct SparkVector2 {
    float x;
    float y;
} SparkVector2;
typedef struct SparkVector3 {
    float x;
    float y;
    float z;
} SparkVector3;
typedef struct SparkVector4 {
    float x;
    float y;
    float z;
    float w;
} SparkVector4;
/** Mirrors Spark::SpriteAnimationClip. */
typedef struct SparkSpriteAnimationClip {
    uint32_t firstFrame;
    uint32_t frameCount;
    float framesPerSecond;
    int loop;
} SparkSpriteAnimationClip;
/** Mirrors Spark::Sprite2DAnimLocomotionSource. */
typedef enum SparkSprite2DAnimLocomotionSource {
    SparkSprite2DAnimLocomotionSource_HorizontalAbsVelX = 0,
    SparkSprite2DAnimLocomotionSource_SpeedSq = 1,
} SparkSprite2DAnimLocomotionSource;
typedef struct SparkGameObject SparkGameObject;
/** Mirrors <c>Spark::PhysicsQueryFilter2D</c>. */
typedef struct SparkPhysicsQueryFilter2D {
    uint16_t queryCategoryBits;
    uint16_t queryMaskBits;
    int hitSolids;
    int hitTriggers;
} SparkPhysicsQueryFilter2D;
/** Mirrors <c>Spark::PhysicsQueryHit2D</c>. */
typedef struct SparkPhysicsQueryHit2D {
    uint32_t staticColliderIndex;
    SparkGameObject* owner;
} SparkPhysicsQueryHit2D;