scripting/bindings/generated/Spark.Bindings/Native.g.cs


        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_get_angular_velocity([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* body, SparkVector3* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_angular_velocity(SparkGameComponent* body, [NativeTypeName("const SparkVector3 *")] SparkVector3* v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_linear_damping(SparkGameComponent* body, float v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_angular_damping(SparkGameComponent* body, float v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_restitution(SparkGameComponent* body, float v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_inverse_mass(SparkGameComponent* body, float inverseMass);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint16_t")]
        public static extern ushort spark_collision_filter_2d_layer_bit([NativeTypeName("uint32_t")] uint layerIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint16_t")]
        public static extern ushort spark_collision_filter_2d_all_layers_mask();

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint16_t")]
        public static extern ushort spark_collision_filter_2d_default_category();

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_physics_query_overlap_circle_world_2d(SparkGameWorld* world, float centerX, float centerY, float radius, [NativeTypeName("const SparkPhysicsQueryFilter2D *")] SparkPhysicsQueryFilter2D* filter, SparkPhysicsQueryHit2D* outHits, [NativeTypeName("uint32_t")] uint maxHits, float cellWorldSize);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_physics_query_overlap_arc_world_statics_2d(SparkGameWorld* world, float originX, float originY, float radius, float dirX, float dirY, float halfAngleRadians, [NativeTypeName("const SparkPhysicsQueryFilter2D *")] SparkPhysicsQueryFilter2D* filter, SparkPhysicsQueryHit2D* outHits, [NativeTypeName("uint32_t")] uint maxHits, float cellWorldSize);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_box_collider_2d_set_is_trigger(SparkGameComponent* collider, int isTrigger);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_box_collider_2d_set_half_extents(SparkGameComponent* collider, [NativeTypeName("const SparkVector2 *")] SparkVector2* halfExtents);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_box_collider_2d_set_category_bits(SparkGameComponent* collider, [NativeTypeName("uint16_t")] ushort bits);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_box_collider_2d_set_mask_bits(SparkGameComponent* collider, [NativeTypeName("uint16_t")] ushort bits);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_circle_collider_2d_set_is_trigger(SparkGameComponent* collider, int isTrigger);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_circle_collider_2d_set_radius(SparkGameComponent* collider, float radius);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_circle_collider_2d_set_category_bits(SparkGameComponent* collider, [NativeTypeName("uint16_t")] ushort bits);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_circle_collider_2d_set_mask_bits(SparkGameComponent* collider, [NativeTypeName("uint16_t")] ushort bits);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_animator_get_clip_index([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float spark_animator_get_time_seconds([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float spark_animator_get_speed([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_animator_set_clip_index(SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint clipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_animator_set_speed(SparkGameComponent* animator, float speed);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_animator_set_time_seconds(SparkGameComponent* animator, float timeSeconds);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_animator_get_clip_count([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_animator_get_loop_mode([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_animator_set_loop_mode(SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint loopMode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_animator_is_clip_finished([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_animator_set_clip_index_with_crossfade(SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint clipIndex, float crossfadeDurationSec);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int spark_animator_find_clip_index_by_name([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator, [NativeTypeName("const char *")] sbyte* name);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_animator_get_clip_name([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint clipIndex, [NativeTypeName("char *")] sbyte* outUtf8, [NativeTypeName("uint32_t")] uint outCapacity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_animator_set_uniform_grid(SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint columns, [NativeTypeName("uint32_t")] uint rows);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_animator_clear_clips(SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_animator_add_clip(SparkGameComponent* animator, [NativeTypeName("const SparkSpriteAnimationClip *")] SparkSpriteAnimationClip* clip);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_animator_set_clip_index(SparkGameComponent* animator, [NativeTypeName("uint32_t")] uint clipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_sprite_animator_get_clip_index([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("uint32_t")]
        public static extern uint spark_sprite_animator_get_clip_count([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_sprite_animator_is_current_clip_finished([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* animator);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_animator_compute_uniform_grid_uv([NativeTypeName("uint32_t")] uint columns, [NativeTypeName("uint32_t")] uint rows, [NativeTypeName("uint32_t")] uint linearFrame, SparkVector4* outUvRect);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_set_locomotion_clips(SparkGameComponent* fsm, [NativeTypeName("uint32_t")] uint idleClipIndex, [NativeTypeName("uint32_t")] uint moveClipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_set_combat_clips(SparkGameComponent* fsm, [NativeTypeName("uint32_t")] uint attackClipIndex, [NativeTypeName("uint32_t")] uint hurtClipIndex);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_set_move_speed_threshold(SparkGameComponent* fsm, float worldUnits);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_2d_fsm_set_locomotion_source(SparkGameComponent* fsm, SparkSprite2DAnimLocomotionSource source);
